--- a/src/css/index.css
+++ b/src/css/index.css
@@ -41,3 +41,183 @@
 
   background-color: var(--detail-color);
 }
+
+.search-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: flex-start;
+  align-items: center;
+  word-wrap: break-word;
+}
+
+.search-box {
+  display: flex;
+  flex-direction: column;
+  background-color: gray;
+  word-wrap: break-word;
+}
+
+.query {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-self: start;
+}
+
+.query-fit {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-self: start;
+}
+
+.form-box {
+  width: fit-content();
+  height: 50vh;
+  margin: 20px;
+  padding: 20px;
+
+  border-radius: 5px;
+  border: solid 3px var(--detail-color);
+  box-shadow: 0px 0px 5px -2px #000000;
+}
+
+.input {
+  display: flex;
+
+  padding: 7px;
+  margin: 5px 5px 5px 5px;
+
+  border-style: none;
+  border-radius: 3px;
+  width: 600px;
+
+  font-size: 18px;
+  box-shadow: inset 0px 0px 5px -2px #000000;
+  background-color: #f5f5f5;
+}
+
+.short-input {
+  display: flex;
+
+  padding: 7px;
+  margin: 5px 5px 5px 5px;
+
+  border-style: none;
+  border-radius: 3px;
+  width: 200px;
+
+  font-size: 18px;
+  box-shadow: inset 0px 0px 5px -2px #000000;
+  background-color: #f5f5f5;
+}
+
+.label {
+  margin: 20px 0px 2px 0px;
+  display: flex;
+  font-size: 23px;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+
+  margin: 5px 5px 5px 5px;
+  width: 125px;
+  padding: 10px;
+  border-radius: 3px;
+  border-style: none;
+
+  font-size: 20px;
+  color: var(--detail-font-color);
+  text-decoration: none;
+
+  background-color: var(--detail-color);
+  box-shadow: inset 0px 0px 5px -2px #000000;
+}
+
+.nav-link {
+  padding: 10px;
+  font-size: 25px;
+  color: var(--detail-font-color);
+  text-decoration: none;
+}
+
+.nav-button {
+  padding: 10px;
+  font-size: 25px;
+  color: white;
+  background: var(--detail-color);
+  border-style: none;
+  text-decoration: none;
+}
+
+.detail-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.detail-layout {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-content: space-around;
+  word-wrap: normal;
+}
+
+.select {
+  display: flex;
+  background-color: whitesmoke;
+  font-size: 20px;
+  padding: 10px;
+  border: 1px solid gray;
+  box-shadow: inset 0px 0px 5px -2px #000000;
+  margin: 5px;
+  justify-content: center;
+  text-align: center;
+}
+
+.purchase-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.cart-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100vw;
+  align-items: center;
+  margin: 20px;
+}
+
+.cart-container {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+}
+
+.checkout {
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  justify-content: flex-end;
+  flex-direction: row;
+}
+
+.home {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+}
